# agents

./: README.md
agents/code-analysis/: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DEVPLAN.md  Dockerfile  Makefile  SDKGuide.md  SpecSheet.md  docker-compose.yaml  pyproject.toml  requirements.in  requirements.txt
agents/code-analysis/.github/workflows/: ci.yml  nightly.yml  release.yml
agents/code-analysis/config/: settings.yaml
agents/code-analysis/docs/: README.md
agents/code-analysis/docs/guides/: tool-execution-demo.md
agents/code-analysis/docs/overview/: architecture.md  code-structure.md  policies.md
agents/code-analysis/docs/plans/: DEVPLAN.md
agents/code-analysis/docs/reports/: OPENAI_AGENTS_COMPLIANCE.md  compatibility-matrix.md  ga-readiness.md  gap-analysis.md  release-checklist.md
agents/code-analysis/docs/runbooks/: operations.md  troubleshooting.md
agents/code-analysis/policies/: network.yaml  paths.yaml  tools.yaml
agents/code-analysis/scripts/: checkpoint_demo.py  demo_tool_run.py  release_artifacts.sh  smoke_test.py
agents/code-analysis/src/agent/: __init__.py  __main__.py  _sdk_stub.py  agent.py  app_agent.py  config.py  context.py  function_tools.py  guardrails.py  llm.py  loop.py  mcp.py  policies.py  runtime.py  sdk.py  sdk_imports.py  state.py
agents/code-analysis/src/agent/agents/: base.py  executor_agent.py  planner_agent.py  (+1 more)
agents/code-analysis/tests/: conftest.py  test_config.py  test_dashboard.py  test_function_tools.py  test_guardrails.py  test_mcp.py  test_runtime.py  test_sdk.py  test_state.py  test_tools.py
(+20 files in other folders)
